# LORE

./: .clang-format  .editorconfig  .gitignore  .gitmodules  README.md  TCG Rules Engine.csproj  TCG Rules Engine.sln  icon.svg.import  project.godot
.devcontainer/ubuntu-2204/: Dockerfile  devcontainer.json  install.sh
.devcontainer/wsl-ubuntu-2204/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml
Images/: bg1.jpg.import  woe-95-hopeless-nightmare.jpg.import
RulesEngine/: Abilities.cs  CMakeLists.txt  Card.cs  Game.cs  Makefile  Player.cs  allCards.json  main.cs  wrapper.i
RulesEngine/core/: CMakeLists.txt  Makefile  wrapper.i
RulesEngine/core/SWIG/: CMakeLists.txt  wrapper.i
RulesEngine/core/include/: Card.h  Game.h  GameWrapper.h  ManagedWrapper.h  Player.h  Util.h
RulesEngine/core/sandbox/: main.cpp
RulesEngine/core/src/: Card.cpp  Game.cpp  GameWrapper.cpp  Player.cpp
RulesEngine/core/tests/: CMakeLists.txt  test_Game.cpp
RulesEngine/csharp/: CardInterface.cs  Game.cs  GodotMain.cs  PlayerInterface.cs  Wrapper.cs
RulesEngine/include/: Card.h  Game.h  GameWrapper.h  Player.h  TurnAction.h  Util.h
RulesEngine/old/: Abilities.cs  Game.cs  Player.cs
RulesEngine/sandbox/: CMakeLists.txt  main.cpp
RulesEngine/src/: Card.cpp  Game.cpp  GameWrapper.cpp  Player.cpp  Util.cpp
RulesEngine/tests/: CMakeLists.txt  test_Game.cpp
Scenes/: Card.tscn  Game.tscn
Scripts/: Card.cs  Card.gd  Game.cs  Player.cs
rules.engine/: Abilities.cs  Game.cs  main.cs
